# web5-components

./: README.md
address-bind/: README.md
address-bind/be/: Cargo.toml  Dockerfile  README.md
address-bind/be/molecules/: bind.rs  ckb.rs
address-bind/be/src/: bind.rs  error.rs  indexer.rs  main.rs  verify.rs
address-bind/fe/: README.md  package-lock.json  package.json
address-bind/fe/src/: index.ts  molecules.ts
address-bind/molecules/: bind.mol  ckb.mol
address-bind/recoverysig/: Dockerfile  README.md  package-lock.json  package.json
address-bind/recoverysig/src/: index.ts
showcase/: community-fund-dao-vote_cn.md
vote/: README.md
vote/create-vote-meta/: README.md  package-lock.json  package.json
vote/create-vote-meta/src/: index.ts  molecules.ts
vote/destory-cell/: README.md  package-lock.json  package.json
vote/destory-cell/src/: index.ts
vote/molecules/: vote.mol
vote/smt/: Cargo.toml  README.md
vote/smt/example/: white_list.json
vote/smt/src/: main.rs  smt_hasher.rs
vote/user-vote/: README.md  tsconfig.json
vote/user-vote/src/: index.ts  molecules.ts
