[package]
name = "address-bind-be"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-hash = "0.202"
ckb-jsonrpc-types = "0.202"
ckb-sdk = "4.4"
ckb-types = "0.202"
clap = { version = "4.5", features = ["derive"] }
molecule = { version = "0.8", default-features = false }
tokio = { version = "1.47", features = ["full"] }
hex = "0.4"
secp256k1 = { version = "0.30", features = ["recovery"] }
dotenvy = "0.15"
rusqlite = "0.37"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
