[package]
name = "smt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "9a893a2", default-features = false, features = ["with-blake2b-ref"] }
blake2b-ref = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
